--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "le-bazar",
+  "name": "bookstore",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -23,11 +23,13 @@
     "@angular/router": "~13.3.0",
     "@ng-bootstrap/ng-bootstrap": "^12.1.2",
     "@popperjs/core": "^2.10.2",
+    "@stripe/stripe-js": "^1.32.0",
     "angular-crud": "^3.0.0",
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.8.3",
     "ngx-bootstrap-icons": "^1.8.4",
     "rxjs": "~7.5.0",
+    "stripe": "^9.11.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
