--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.8.3",
     "ngx-bootstrap-icons": "^1.8.4",
+    "ngx-pagination": "^6.0.2",
     "rxjs": "~7.5.0",
     "stripe": "^9.11.0",
     "tslib": "^2.3.0",
