--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "angular-crud": "^3.0.0",
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.8.3",
+    "creditcardpayments": "^1.0.3",
     "ng2-file-upload": "^1.4.0",
     "ngx-bootstrap-icons": "^1.8.4",
     "ngx-pagination": "^6.0.2",
