--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "ng2-file-upload": "^1.4.0",
     "ngx-bootstrap-icons": "^1.8.4",
     "ngx-pagination": "^6.0.2",
+    "ngx-paypal": "^9.0.0",
     "rxjs": "~7.5.0",
     "stripe": "^9.11.0",
     "tslib": "^2.3.0",
